<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:background="@color/colorsecciones">

    <ScrollView
        android:id="@+id/contenedorFormulario"
        android:layout_width="369dp"
        android:layout_height="670dp"
        android:background="@drawable/estilofondologin"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/botonAtras"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/registro"
                android:src="@drawable/icons8flecha90"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rNombre"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rNombreE"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rCorreo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rCorreoE"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rContrasena"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rContrasenaE"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rTelef"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rTelefE"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rAltura"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rAlturaE"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rPeso"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:hint="@string/rPesoE"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rFecha"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/campoFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rFechaE"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/estilodatologin"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rObjetivo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilodatologin"
                android:padding="10dp" />

            <Button
                android:id="@+id/botonRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="?attr/colorButtonNormal"
                android:text="@string/btRegistro"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
