<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_centerHorizontal="true"
            android:background="#6ACF78">

            <ImageView
                android:id="@+id/botonPerfil"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/irPerfil"
                app:srcCompat="@drawable/icons8cuenta30"/>

            <ImageView
                android:id="@+id/botonInicio"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/irMain"
                app:srcCompat="@drawable/icons8casa24"/>

            <ImageView
                android:id="@+id/botonAgregar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/irComida"
                app:srcCompat="@drawable/icons8mas50"/>

            <ImageView
                android:id="@+id/botonDeportes"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/irDeporte"
                app:srcCompat="@drawable/icons8running50"/>

            <ImageView
                android:id="@+id/botonEstadistica"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/irEstadts"
                app:srcCompat="@drawable/icons8diagram64"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
