<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity2">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/perfil"
        android:src="@drawable/icons8usuario94"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100"/>

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="610dp"
        android:layout_margin="30dp"
        android:background="@drawable/estilofondoperfil"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/editar"
            android:src="@drawable/icons8editar40" />

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombrePerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nombrePerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correoPerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/correoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonoPerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/telefonoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alturaPerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alturaPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesoPerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pesoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilodatoperfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechnacPerfil"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fechnacPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:background="@drawable/estilobotonguardar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>